[package]
name = "apnrs"
version = "0.2.0"
edition = "2021"
description = "A Rust library for sending push notifications via APNs."
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
jsonwebtoken = "7.1"

[lib]
crate-type = ["lib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3